--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 benchmark/node_modules
 benchmark/package-lock.json
 
-server/node_modules
-server/package-lock.json
-server/src/solution.js
+api/node_modules
+api/package-lock.json
+api/src/solution.js
