--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 9000:9000
     volumes:
         - /code/node_modules
-        - ./server:/code
+        - ./api:/code
 
     command: bash -c "cd /code && npm install && sleep infinity"
   mongo:
