--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,8 @@
 {
     "dependencies": {
-        "express": "4.17.1",
         "body-parser": "1.19.0",
-        "mongoose": "5.9.1"
+        "express": "4.17.1",
+        "mongoose": "5.9.1",
+        "redis": "^3.0.2"
     }
 }
